--- a/spring_back_application-main/src/main/resources/application.properties
+++ b/spring_back_application-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/location?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/location?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&maxAllowedPacket=67108864
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
