commit for deployment

--- a/spring_back_application-main/src/main/resources/application.properties
+++ b/spring_back_application-main/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/location?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&maxAllowedPacket=67108864
+spring.datasource.url=jdbc:mysql://containers-us-west-131.railway.app:6420/railway?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&maxAllowedPacket=67108864
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=nIZzYMxMiT73MepH2TzX
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
+# Set max_allowed_packet to 2 MB
+spring.datasource.tomcat.max-wait=2000000
+spring.datasource.tomcat.max-allowed-packet=2097152
+
 
 #Mailing Configuration
 spring.mail.host=smtp.gmail.com
